# ChangeLog for dev-libs/libhash
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libhash/ChangeLog,v 1.6 2010/05/18 18:50:50 flameeyes Exp $

  18 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  libhash-1.0.3.ebuild:
  Respect CPPFLAGS/LDFLAGS and fix linking of tests with --as-needed.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*libhash-1.0.3 (14 Jun 2005)

  14 Jun 2005; Mike Frysinger <vapier@gentoo.org> +libhash-1.0.3.ebuild:
  Version bump #96070 by David Holm.

  17 Jul 2004; David Holm <dholm@gentoo.org> libhash-1.0.2.ebuild:
  Added to ~ppc.

*libhash-1.0.2 (13 Jul 2004)

  13 Jul 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.