@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST libhash-1.0.2.tar.gz 8763 RMD160 34f5dc63d5dd5cf00ebb235bdfe4de66d57c9280 SHA1 e37dc7d55c11e19f660e731d337e8714bb833f18 SHA256 f478eba0c72e45508f84ddb9bba0fb40fa82212d8b8c3b458bcb9bd9c7e29667
 DIST libhash-1.0.3.tar.gz 8918 RMD160 d3a470424da8380e2e360ce92c7fcd78d60fcb90 SHA1 51c5d9e08132b91ffabcb9755ba2f3dfc0ee72d7 SHA256 13d57b35537d98aaf39115d0bb253fe54009f773d239b235267c34769bd1ef9d
-EBUILD libhash-1.0.2.ebuild 886 RMD160 fbdc36b2f8409c85938ee812544d6ba7bb892288 SHA1 c766c702ec612482ad7974bd20ee9b41ea73d3f9 SHA256 54506266a0723fe9635068fd169a7d64b6f0cd62de523c380939e5bf19519077
-EBUILD libhash-1.0.3.ebuild 1165 RMD160 cf2d1bb32dd16826ab13f2dd8c6978a503e5869a SHA1 1883021c287d1f5ed9995cdfd434d849e9ecfef8 SHA256 7f6826cebe4375a8e5ccf590575508cb1bd45d2927368636deb8cca8853f34c0
-MISC ChangeLog 816 RMD160 0430c3af3406dab1bafcbf3a723bdd7346c7e9c4 SHA1 8337c28548d6b6867676c6a09be6f30794e70eb3 SHA256 5aae2112d893daabbe6d70f6e1d739445137f0edadc9049762616de2523ad8a1
+EBUILD libhash-1.0.3-r1.ebuild 1194 RMD160 5b4a7fdcd1e8df37cf4709bd9b98140b9b44cd7d SHA1 facbfef84cbca17c0300b81b890ab827cbd07026 SHA256 404263fb1433fe1c784214a509b35c7dfe4978ac73de30c9b7c1b156555bbc2d
+MISC ChangeLog 1056 RMD160 e1fe76c458980b5cb3d09ac645caed8104919e43 SHA1 d69638ec75f7f6d305a2d0f6212d2a37a9bb6f53 SHA256 5340b45b6ae4ed729c0936c265578dd013be6c44209bc4d5fd6ca6ff8bfb685a
 MISC metadata.xml 232 RMD160 9175a294469e617e696f19e3b6468f8747de37b0 SHA1 cc789056a277a74bd76eaf8139cee7bbbd350785 SHA256 433f35a36976e29c3c0e3f51bf5184d26578cf99de91cff0b50796b57c6b6ca1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkvy4YMACgkQAiZjviIA2Xi5lQCg6zTVqrwoj5pwPpdlFZ1u651L
-h0MAni188J3sRRB1yinOQoY89wilJCgb
-=bWa2
+iEYEARECAAYFAkxohzIACgkQni8M22OVw8BuDACdGUVWIPfSWRGW8v3ZJ81gmeq4
+jvwAnj+S+90OtXQnLRQxVmCMXhh6WGsq
+=bzAw
 -----END PGP SIGNATURE-----
