@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-libs/libhash/ChangeLog,v 1.6 2010/05/18 18:50:50 flameeyes Exp $
 
+  16 Aug 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> -libhash-1.0.2.ebuild,
+  -libhash-1.0.3.ebuild, +libhash-1.0.3-r1.ebuild:
+  Drop failing libhash-1.0.2. Add SONAME support to libhash-1.0.3 wrt bug
+  332937.
+
   18 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
   libhash-1.0.3.ebuild:
   Respect CPPFLAGS/LDFLAGS and fix linking of tests with --as-needed.
